--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,13 +1,12 @@
 /* Primary and secondary color */
 :root {
-  --primary-color: #0044cc; /* Blue */
-  --secondary-color: #02f5dd; /* Yellow */
+  --primary-color: #001233; /* Blue */
+  --secondary-color: #696969; /* */
 }
-
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: var(--secondary-color);
 }
 
 /* Navbar styling */
@@ -18,6 +17,12 @@ body {
   padding: 1rem;
   background-color: var(--primary-color);
   color: white;
+  position: fixed; /* Fixed at the top of the page */
+  top: 0;
+  left: 0;
+  width: 100%; /* Full width */
+  z-index: 100; /* Ensure it's above other elements */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add slight shadow for visibility */
 }
 
 .navbar-logo {
@@ -33,7 +38,7 @@ body {
 .nav-links a {
   color: white;
   text-decoration: none;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
@@ -91,5 +96,6 @@ body {
 
   .toggle-menu {
     display: flex; /* Show toggle button on mobile */
+    padding-right: 1rem;
   }
 }
