--- a/templates/AboutUs.html
+++ b/templates/AboutUs.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Al Noor Bootcamp</title>
     <!-- Link to the external CSS in the css folder -->
-    <link rel="stylesheet" href="css/index.css"/>
-    <link rel="stylesheet" href="css/navbar.css"/>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/index.css') }}"
+    />
 
     <link
       rel="stylesheet"
@@ -20,12 +22,12 @@
     <nav class="navbar">
       <div class="navbar-logo">Al Noor Bootcamp</div>
       <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="AboutUs.html">About Us</a>
-        <a href="courses.html">Our Courses</a>
-        <a href="mentors.html">Technical Mentor</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="applay.html">Apply</a>
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('about') }}">About Us</a>
+        <a href="{{ url_for('courses') }}">Our Courses</a>
+        <a href="{{ url_for('mentors') }}">Technical Mentor</a>
+        <a href="{{ url_for('contact') }}">Contact Us</a>
+        <a href="{{ url_for('apply') }}">Apply</a>
       </div>
       <div class="toggle-menu" onclick="toggleMenu()">
         <div></div>
@@ -49,7 +51,10 @@
         </div>
       </div>
       <div class="header-image">
-        <img src="images/slide1.jpg" alt="Illustration of working team" />
+        <img
+          src="{{ url_for('static', filename='images/slide1.jpg') }}"
+          alt="Slide 1"
+        />
       </div>
     </section>
 
@@ -68,7 +73,10 @@
         </p>
       </div>
       <div class="image-container">
-        <img src="images/slide1.jpg" alt="Team Working" />
+        <img
+          src="{{ url_for('static', filename='images/slide3.jpg') }}"
+          alt="Slide 3"
+        />
       </div>
     </section>
     <!-- what we offer -->
@@ -178,6 +186,6 @@
 
     <!-- AOS JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-    <script src="js/toggle.js"></script>
+    <script src="{{ url_for('static', filename='js/toggle.js') }}"></script>
   </body>
 </html>
